fixed backlight and power profiles having a wrong padding.

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -87,6 +87,7 @@ window#waybar.empty #window {
 #power-profiles-daemon {
 	color: #b4befe;
 	box-shadow: inset 0 -3px transparent;
+	padding-right:1rem;
 }
 
 #cpu {
@@ -143,6 +144,7 @@ window#waybar.empty #window {
 
 #backlight {
 	color: #b4befe;
+	padding-right:1rem;
 }
 
 tooltip {
